--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,6 +6,29 @@ media_folder: static/uploads/images
 public_folder: uploads/images
 
 collections:
+  - name: "settings"
+    label: "Settings"
+    editor:
+      preview: false
+    files:
+      - name: "settings"
+        label: "Settings"
+        file: "content/settings.md"
+        fields:
+          - label: "Social Media"
+            name: "social-media"
+            widget: "object"
+            fields:
+              - { label: Facebook, name: facebook, wdiget: string }
+              - { label: "Google Plus", name: google_plus, wdiget: string }
+              - { label: Instagram, name: instagram, wdiget: string }
+            - label: "Contact Information"
+              name: contact-info
+              widget: "object"
+              fields: 
+                - { label: "Address", name: address, widget: string}
+                - { label: "Phone Number", name: phone, widget: string}
+                - { label: "Email Address", name: email, widget: string}
   - name: "pages"
     label: "Pages"
     editor:
