--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -58,7 +58,7 @@ collections:
             widget: "list"
             allow_add: false
             fields:
-              - { label: "URL", name: url, widget: string }
+              - { label: "URL", name: url, widget: string, required: false }
               - { label: "Type", name: type, widget: hidden, default: "fb"}
               - { label: "Icon", name: icon, widget: hidden, default: "<i class=\"fab fa-facebook-square\"></i>" }
           - label: "Contact Information"
