--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-remark-copy-linked-files": "^2.1.15",
     "gatsby-remark-images": "^3.1.20",
     "gatsby-remark-prismjs": "^3.3.12",
+    "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-remark-responsive-iframe": "^2.2.12",
     "gatsby-remark-smartypants": "^2.1.7",
     "gatsby-source-filesystem": "^2.1.21",
