--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,6 +17,7 @@ collections:
         name: "landing"
         file: "content/landing-page.md"
         fields:
+          - { label: Title, name: title, widget: hidden, default: Landing Page }
           - { label: "Featured Image", name: "fimage", widget: hidden, default: "./images/opengraph.jpg" }
           - label: "Sections"
             name: "sections"
