--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
+    "react-color": "^2.17.3",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "styled-components": "^4.3.2",
