--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -58,7 +58,7 @@ collections:
                   - { label: "Title", name: "title", widget: "string" }
                   - { label: "Paragraph", name: "paragraph", widget: "string" }
               - label: "Paragraph"
-                name: "paragraph"
+                name: "fake_paragraph"
                 widget: hidden
                 fields:
                   - { label: "Title", name: "title", widget: "string", default: '' }
