--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "animejs": "^3.1.0",
     "babel-plugin-styled-components": "^1.10.6",
     "bootstrap": "^4.3.1",
+    "color": "^3.1.2",
     "gatsby": "^2.15.7",
     "gatsby-image": "^2.2.17",
     "gatsby-plugin-manifest": "^2.2.14",
