updated promotions for cms-app

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -82,7 +82,7 @@ collections:
                 fields:
                   - label: Icon 
                     name: icon
-                    widget: fontawesome
+                    widget: fontawesome-solid
   - name: "settings"
     label: "Settings"
     editor:
