--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Michael Walker <bandagedwolf95@gmail.com>",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
