--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-helmet": "^5.2.1",
     "react-loadable": "^5.5.0",
     "styled-components": "^4.3.2",
+    "tiny-slider": "^2.9.2",
     "webpack": "^4.39.3"
   },
   "devDependencies": {
