--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gatsby-transformer-remark": "^2.6.21",
     "gatsby-transformer-sharp": "^2.2.13",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
     "macy": "^2.5.0",
     "materialize-css": "^1.0.0-rc.2",
     "netlify-cms-app": "^2.9.7",
