--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@pake/react-color": "^3.0.0",
     "animejs": "^3.1.0",
+    "babel-eslint": "^10.0.3",
     "babel-plugin-styled-components": "^1.10.6",
     "bootstrap": "^4.3.1",
     "color": "^3.1.2",
@@ -57,6 +58,8 @@
     "webpack": "^4.39.3"
   },
   "devDependencies": {
+    "eslint": "^6.5.1",
+    "eslint-plugin-react": "^7.15.1",
     "holderjs": "^2.9.6",
     "lit-html": "^1.1.2",
     "prettier": "^1.18.2"
