--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gatsby-source-filesystem": "^2.1.21",
     "gatsby-transformer-remark": "^2.6.21",
     "gatsby-transformer-sharp": "^2.2.13",
+    "geopattern": "^1.2.3",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
     "macy": "^2.5.0",
