--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -83,9 +83,13 @@ collections:
                       - { label: Body, name: body, widget: text }
               - label: Gallery
                 name: gallery
-                widget: list
+                widget: object
                 fields:
-                  - { label: Gallery Image, name: image, type: image }
+                  - label: Gallery Items
+                    name: gallery_itmes
+                    widget: list
+                    fields:
+                      - { label: Gallery Image, name: image, type: image }
               - label: Promotions
                 name: promotions
                 widget: object
