--- a/package.json
+++ b/package.json
@@ -61,9 +61,12 @@
   "devDependencies": {
     "eslint": "^6.5.1",
     "eslint-plugin-react": "^7.15.1",
+    "gatsby": "^2.15.29",
     "holderjs": "^2.9.6",
     "lit-html": "^1.1.2",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2"
   },
   "keywords": [
     "gatsby"
@@ -83,5 +86,10 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
+  "peerDependencies": {
+    "gatsby": "^2.15.29",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2"
   }
 }
