--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "author": "Michael Walker <bandagedwolf95@gmail.com>",
+  "author": "Michael Walker <mikeduels@yahoo.com>",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
@@ -86,10 +86,5 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
-  },
-  "peerDependencies": {
-    "gatsby": "^2.15.29",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2"
   }
 }
