--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "flake-gatsby",
+  "name": "gatsby-starter-netlify-cms-landing-page",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A simple starter to create a landing page that can be customized with Netlify CMS",
   "version": "0.1.0",
   "author": "Michael Walker <mikeduels@yahoo.com>",
   "dependencies": {
